--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -97,12 +97,15 @@ mods = "Command"
 [window]
 decorations = "None"
 dynamic_padding = true
-opacity = 0.8
+opacity = 0.7
 startup_mode = "Maximized"
 
 [window.padding]
 x = 15
 y = 15
+
+[selection]
+save_to_clipboard = true
 
 [terminal.shell]
 program = "wsl"
