--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,6 @@
 [general]
 import = [
+
     "C:\\Users\\sterx\\AppData\\Roaming\\alacritty\\themes\\themes\\kanagawa_dragon.toml"
 #
 # DOWNLOAD FROM:
@@ -84,6 +85,13 @@ action = "Copy"
 key = "C"
 mods = "Control|Shift"
 
+
+[[keyboard.bindings]]
+key = "V"
+mods = "Super"
+action = "Paste"
+
+
 [[keyboard.bindings]]
 action = "Paste"
 key = "V"
@@ -123,10 +131,10 @@ key = "R"
 mods = "Command"
 
 [window]
-decorations = "None"
+decorations = "Full"
 dynamic_padding = true
 opacity = 0.7
-startup_mode = "Maximized"
+startup_mode = "Windowed"
 
 [window.padding]
 x = 15
@@ -152,16 +160,12 @@ persistent_logging = false
 [colors]
 draw_bold_text_with_bright_colors = true
 
-[terminal.shell]
-program = "wsl"
-args = [
-    "-d",
-    "Debian",
-    "--cd",
-    "~"
-]
-
-
-
-
-
+#[terminal.shell]
+#program = "wsl"
+#args = [
+#    "-d",
+#    "Debian",
+#    "--cd",
+#    "~",
+#	"tmux"
+#]
