--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -160,12 +160,12 @@ persistent_logging = false
 [colors]
 draw_bold_text_with_bright_colors = true
 
-#[terminal.shell]
-#program = "wsl"
-#args = [
-#    "-d",
-#    "Debian",
-#    "--cd",
-#    "~",
-#	"tmux"
-#]
+# Запуск WSL
+[terminal.shell]
+program = "wsl"
+args = [
+    "-d",
+    "Debian",
+    "--cd",
+    "~"
+]
