--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -32,10 +32,16 @@
 # prefix + 0-9 - переключение на окно по номеру
 # prefix + l - последнее активное окно
 
-# Дополнительные горячие клавиши без префикса
-bind -n C-Left previous-window   # Ctrl+Left - предыдущее окно (без префикса)
-bind -n C-Right next-window      # Ctrl+Right - следующее окно (без префикса)
+# Переключение окон через Alt + стрелки (без префикса)
+# Ctrl + стрелки теперь работают стандартно (перемещение по словам в терминале)
+bind -n M-Left previous-window   # Alt+Left - предыдущее окно
+bind -n M-Right next-window      # Alt+Right - следующее окно
 bind Tab last-window             # Tab - последнее активное окно (без префикса)
+
+# Если Alt+стрелки не работают, попробуйте эти варианты (раскомментируйте один из них):
+# Для некоторых терминалов Alt передается как Escape последовательность
+# bind -n "\e[1;3D" previous-window   # Alt+Left (альтернативный вариант)
+# bind -n "\e[1;3C" next-window      # Alt+Right (альтернативный вариант)
 
 # Нумерация окон и панелей с 1 (по умолчанию с 0)
 set -g base-index 1              # Окна начинаются с номера 1
