--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -222,7 +222,7 @@ bind M new-window "htop"                                           # prefix + Sh
 
 # ===== РАБОТА С БАЗАМИ ДАННЫХ =====
 # Создание окон для работы с БД:
-tmux new-window -n "mysql" "mysql -u urovenkna_mve -p urovenkna_mve"
+# tmux new-window -n "mysql" "mysql -u urovenkna_mve -p urovenkna_mve"
 # tmux new-window -n "psql" "psql -U user -d database_name"        # Для PostgreSQL
 # tmux new-window -n "redis" "redis-cli"                            # Для Redis
 
