add: new status bar info

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -206,7 +206,7 @@ bind M new-window "htop"                                           # prefix + Sh
 # ===== РАБОТА С PHP И COMPOSER =====
 # Полезные команды для PHP разработки (выполняйте в терминале):
 # tmux new-window -n "composer" "cd /path/to/project && composer install"
-# tmux new-window -n "tests" "cd /path/to/project && phpunit"
+# tmux new-window -n "tests" "cd /path/to/project && phpunit"a
 # tmux new-window -n "artisan" "cd /path/to/project && php artisan tinker"  # Для Laravel
 
 # ===== РАБОТА С GIT =====
@@ -248,7 +248,7 @@ set-option -g status-style "bg=#1e1e2e,fg=#8be9fd"
 
 # Левая часть: имя сессии с иконкой
 set -g status-left-length 30
-set -g status-left "#[fg=#50fa7b,bg=#1e1e2e,bold] 󰆍 #S #[fg=#1e1e2e,bg=#50fa7b]│#[default]"
+set -g status-left "#[fg=#50fa7b,bg=#1e1e2e,bold] 󰆍 #[fg=#1e1e2e,bg=#50fa7b]│#[default]"
 # #S - имя текущей сессии tmux
 # │ - разделитель
 
@@ -323,8 +323,8 @@ set -g @plugin 'tmux-plugins/tmux-continuum'        # Автоматическо
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight' # Подсветка статус-бара при нажатии префикса
 set -g @plugin 'tmux-plugins/tmux-cpu'              # Отображение загрузки CPU в статус-баре
 set -g @plugin 'tmux-plugins/tmux-battery'          # Отображение уровня заряда батареи
-set -g @plugin 'jimeh/tmux-themepack'                # Коллекция тем для tmux
-set -g @themepack 'powerline/dark/blue'             # Конкретная тема: powerline, тёмная, синяя
+# set -g @plugin 'jimeh/tmux-themepack'                # Коллекция тем для tmux (отключено - используем кастомный статус-бар)
+# set -g @themepack 'powerline/dark/blue'             # Конкретная тема: powerline, тёмная, синяя (отключено)
 
 # ===== ДОПОЛНИТЕЛЬНЫЕ ПЛАГИНЫ ДЛЯ DEVOPS/FullStack РАЗРАБОТЧИКА =====
 # Раскомментируйте нужные плагины и установите их через prefix + I (Shift+i)
