--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -38,18 +38,25 @@
 # Отвязываем старые биндинги Alt+стрелок (если они были для resize-pane)
 unbind -n M-Left
 unbind -n M-Right
+unbind -n M-Up
+unbind -n M-Down
 unbind -T prefix M-Left
 unbind -T prefix M-Right
+unbind -T prefix M-Up
+unbind -T prefix M-Down
 
-# Устанавливаем новые биндинги для переключения окон
-bind -n M-Left previous-window   # Alt+Left - предыдущее окно
-bind -n M-Right next-window      # Alt+Right - следующее окно
-bind Tab last-window             # Tab - последнее активное окно (без префикса)
+# Устанавливаем биндинги для переключения окон через Alt+стрелки
+# Пробуем стандартные биндинги (работают в большинстве терминалов)
+bind -n M-Left previous-window       # Alt+Left - предыдущее окно
+bind -n M-Right next-window          # Alt+Right - следующее окно
+bind -n M-Up previous-window         # Alt+Up - предыдущее окно (дубликат)
+bind -n M-Down next-window           # Alt+Down - следующее окно (дубликат)
 
-# Если Alt+стрелки не работают, попробуйте эти варианты (раскомментируйте один из них):
-# Для некоторых терминалов Alt передается как Escape последовательность
-# bind -n "\e[1;3D" previous-window   # Alt+Left (альтернативный вариант)
-# bind -n "\e[1;3C" next-window      # Alt+Right (альтернативный вариант)
+# Если стандартные не работают, попробуйте раскомментировать escape-последовательности:
+# bind -n "\033[1;3D" previous-window   # Alt+Left (альтернативный вариант)
+# bind -n "\033[1;3C" next-window       # Alt+Right (альтернативный вариант)
+
+bind Tab last-window                # Tab - последнее активное окно (без префикса)
 
 # Нумерация окон и панелей с 1 (по умолчанию с 0)
 set -g base-index 1              # Окна начинаются с номера 1
@@ -246,11 +253,9 @@ set-option -g status-justify left
 # Цвета статус-бара: тёмный фон, неоновый текст
 set-option -g status-style "bg=#1e1e2e,fg=#8be9fd"
 
-# Левая часть: имя сессии с иконкой
-set -g status-left-length 30
-set -g status-left "#[fg=#50fa7b,bg=#1e1e2e,bold] 󰆍 #[fg=#1e1e2e,bg=#50fa7b]│#[default]"
-# #S - имя текущей сессии tmux
-# │ - разделитель
+# Левая часть: убрана (пустая)
+set -g status-left ""
+set -g status-left-length 0
 
 # Правая часть: системная информация (CPU, память, время, дата, хост)
 set -g status-right-length 100
@@ -275,14 +280,13 @@ set -g status-right "#[fg=#bd93f9,bg=#1e1e2e]│#[fg=#f1fa8c]%d.%m #[fg=#bd93f9]
 # Окна: улучшенное форматирование с разделителями
 set-window-option -g window-status-separator ""
 
-# Активное окно: яркий фон, тёмный текст
-set-window-option -g window-status-current-format "#[fg=#1e1e2e,bg=#ff5555,bold] #I: #W #[fg=#ff5555,bg=#1e1e2e]│#[default]"
-# #I - номер окна, #W - имя окна
-# Красный фон для активного окна, разделитель справа
+# Активное окно: звездочка, жирный шрифт, темный фон
+set-window-option -g window-status-current-format "#[fg=#ffffff,bg=#434343,bold] * #I: #W #[fg=#434343,bg=#1e1e2e]│#[default]"
+# * - звездочка для активного окна, #I - номер окна, #W - имя окна
 
 # Неактивные окна: приглушённые цвета
 set-window-option -g window-status-format "#[fg=#6272a4] #I: #W #[fg=#1e1e2e]│#[default]"
-# Приглушённый синий для неактивных окон
+# Приглушённый синий для неактивных окон, без звездочки
 
 # Окна с активностью (есть вывод в неактивном окне)
 set-window-option -g window-status-activity-style "fg=#ffb86c,bg=#1e1e2e"
